infrastructure/eks/ingress/ingress-alb-http-only.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kaytu-octopus
  name: kaytu-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: demo4.kaytu.sh
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-proxy
              port:
                number: 80
